--- a/src/views/MDCx.ui
+++ b/src/views/MDCx.ui
@@ -9060,6 +9060,11 @@ QPushButton:pressed{ background-color: rgba(255, 255, 255, 10);}</string>
                  <string>javday</string>
                 </property>
               </item>
+              <item>
+                <property name="text">
+                 <string>javhdporn</string>
+                </property>
+              </item>
              </widget>
             </item>
             <item row="2" column="1">
